crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@trace_hello_world.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/trace_hello_world.as
---
initializer:
  actions:
    - ConstantPool:
        - Hello World
    - Push:
        - Constant: 0
    - Trace
  label_positions: {}
extra_modules: []
swf_version: 15
