crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@try_catch_finally_break_continue.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/try_catch_finally_break_continue.as
---
initializer:
  actions:
    - ConstantPool:
        - i
        - loop i=
        - "  try:i="
        - boom@2
        - boom@4
        - "  catch:"
        - e
        - "  finally:i="
        - "  after try/catch/finally i="
        - done
    - Push:
        - Constant: 0
        - Integer: 0
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 6
    - Less2
    - Not
    - If: loc0000
    - Push:
        - Constant: 1
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 2
                - Constant: 0
            - GetVariable
            - Add2
            - Trace
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 1
            - Equals2
            - Not
            - If: loc0003
            - Jump: loc0001
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 2
            - Equals2
            - Not
            - If: loc0004
            - Push:
                - Constant: 3
            - Throw
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 4
            - Equals2
            - Not
            - If: loc0005
            - Push:
                - Constant: 4
            - Throw
          label_positions:
            loc0003: 11
            loc0004: 19
            loc0005: 27
        catch_body:
          - Variable: e
          - actions:
              - Push:
                  - Constant: 5
                  - Constant: 6
              - GetVariable
              - Add2
              - Trace
              - Push:
                  - Constant: 6
              - GetVariable
              - Push:
                  - Constant: 3
              - Equals2
              - Not
              - If: loc0006
              - Jump: loc0000
              - Push:
                  - Constant: 6
              - GetVariable
              - Push:
                  - Constant: 4
              - Equals2
              - Not
              - If: loc0007
              - Jump: loc0001
            label_positions:
              loc0006: 11
              loc0007: 18
        finally_body:
          actions:
            - Push:
                - Constant: 7
                - Constant: 0
            - GetVariable
            - Add2
            - Trace
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 3
            - Equals2
            - Not
            - If: loc0008
            - Jump: loc0001
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 5
            - Equals2
            - Not
            - If: loc0009
            - Jump: loc0000
          label_positions:
            loc0008: 11
            loc0009: 18
    - Push:
        - Constant: 8
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 0
        - Constant: 0
    - GetVariable
    - Increment
    - SetVariable
    - Jump: loc0002
    - Push:
        - Constant: 9
    - Trace
  label_positions:
    loc0002: 3
    loc0001: 18
    loc0000: 23
extra_modules: []
swf_version: 15
