crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@typeof.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/typeof.as
---
initializer:
  actions:
    - ConstantPool:
        - num
        - obj
        - trace
        - "typeof num: "
        - "typeof obj: "
        - "typeof obj.num: "
        - "typeof obj.num + 1: "
        - "typeof obj.num == \"number\" ? \":)\" : \":(\": "
        - number
        - ":)"
        - ":("
        - "typeof obj.num + typeof obj.num: "
        - "typeof obj.trace: "
        - "typeof obj.trace(): "
    - Push:
        - Constant: 0
        - Integer: 1
    - DefineLocal
    - Push:
        - Constant: 1
        - Constant: 0
        - Integer: 1
        - Constant: 2
        - Constant: 2
    - GetVariable
    - Push:
        - Integer: 2
    - InitObject
    - DefineLocal
    - Push:
        - Constant: 3
        - Constant: 0
    - GetVariable
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 4
        - Constant: 1
    - GetVariable
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 5
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 6
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Push:
        - Integer: 1
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 7
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Push:
        - Constant: 8
    - Equals2
    - Not
    - If: loc0001
    - Push:
        - Constant: 9
    - Jump: loc0000
    - Push:
        - Constant: 10
    - Add2
    - Trace
    - Push:
        - Constant: 11
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 12
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetMember
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 13
        - Integer: 0
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - CallMethod
    - TypeOf
    - Add2
    - Trace
  label_positions:
    loc0001: 45
    loc0000: 46
extra_modules: []
