crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@with.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/with.as
---
initializer:
  actions:
    - ConstantPool:
        - foo
        - createEmptyMovieClip
        - ""
        - _name
    - Push:
        - Integer: 1
        - Constant: 0
        - Integer: 2
        - Constant: 1
    - CallFunction
    - Pop
    - Push:
        - Constant: 2
        - Integer: 13
    - GetProperty
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - With:
        actions:
          - Push:
              - Constant: 3
          - GetVariable
          - Trace
        label_positions: {}
    - Push:
        - Constant: 0
    - GetVariable
    - With:
        actions:
          - Push:
              - Constant: 3
          - GetVariable
          - Trace
        label_positions: {}
  label_positions: {}
extra_modules: []
swf_version: 15
